--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+    "name": "udagram",
+    "version": "0.0.1",
+    "description": "Hosting Project on AWS Services.",
     "scripts": {
-        "frontend:install": "cd udagram/udagram-frontend && npm install -f",
+        "frontend:install": "cd udagram/udagram-frontend && npm install",
         "frontend:start": "cd udagram/udagram-frontend && npm run start",
         "frontend:build": "cd udagram/udagram-frontend && npm run build",
         "frontend:test": "cd udagram/udagram-frontend && npm run test",
@@ -12,5 +15,10 @@
         "api:start": "cd udagram/udagram-api && npm run dev",
         "api:deploy": "cd udagram/udagram-api && npm run deploy",
         "deploy": "npm run api:deploy && npm run frontend:deploy"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Dream-Team-Pro/Udacity-Project3-Hosting-a-Full-Stack-Application.git"
+      },
+      "author": "Mohamed Salah <moh.horizon@gmail.com>"
 }
