--- a/udagram/udagram-api/.env
+++ b/udagram/udagram-api/.env
@@ -3,11 +3,11 @@ POSTGRES_USERNAME=postgres
 POSTGRES_DB=postgres  
 POSTGRES_PASSWORD=postgres  
 DB_PORT=5432  
-PORT=5432  
+PORT=4200  
 AWS_REGION="us-east-1"  
 AWS_PROFILE="default"  
 AWS_BUCKET="udacity-app-udagram"  
-URL="http://udagramcli-env.eba-k6depxex.us-east-1.elasticbeanstalk.com/api/v0"
+URL="http://udacity-app-udagram.s3-website-us-east-1.amazonaws.com/"
 JWT_SECRET="jwt-udagram"
-EB_APP=Udagramcli-en
+EB_APP=udagram-cli
 EB_ENV=Udagramcli-env
