--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           name: backend Deploy
           command: npm run backend:deploy
 workflows:
- build_and_deploy:
+ Build:
     jobs:
       - Frontend
       - Backend
