--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
-  Build:
+  build-and-deploy:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/node:16.13.2"
@@ -58,7 +58,7 @@ jobs:
           name: backend Deploy
           command: npm run backend:deploy
 workflows:
- Build:
+ build_and_deploy:
     jobs:
       - Frontend
       - Backend
