--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
         - checkout
         - aws-cli/setup
         - eb/setup
-    Frontend:
+    frontend:
         # Use root level package.json to install dependencies in the frontend app
         - run:
             name: Install Front-End Dependencies
@@ -38,7 +38,7 @@ jobs:
         - run:
             name: Front-End Deploy
             command: npm run frontend:deploy
-    Backend:
+    backend:
         # TODO: Install dependencies in the the backend API          
         - run:
             name: Install backend Dependencies
@@ -56,10 +56,10 @@ jobs:
             name: backend Deploy
             command: npm run backend:deploy
 workflows:
- build_and_deploy:
-    jobs:
-      - Frontend
-      - Backend
+    build_and_deploy:
+        jobs:
+            - frontend
+            - backend
 filters:
     branches:
       only:
