--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,10 +56,10 @@ jobs:
             name: backend Deploy
             command: npm run backend:deploy
 workflows:
-    build_and_deploy:
-        jobs:
-            - frontend
-            - backend
+    jobs:
+        - build_and_deploy
+        - frontend
+        - backend
 filters:
     branches:
       only:
